# python-project-50

./: .gitignore  A.cast  Makefile  README.md  generate_results.py  hello.py  json.cast  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  вторая.cast  плейн.cast  справка.cast  справка1.cast  справка123.cast  третья.cast
.github/workflows/: README.md  hexlet-check.yml  main.yml  pyci.yml  test-check.yml
files/: file1.json
gendiff/: __init__.py  build_diff.py  builder.py  calculate_diff.py  cli.py  consts.py  core.py  data.py  dicts_diff.py  diff.py  diff_with_formatter.py  file_formatter.py  file_parser.py  gendiff.py  generate_diff.py  get_diff.py  hello.py  helpers.py  load_files.py  loader.py  parse.py  parser.py  plain.py  readers.py  stylish.py  utils.py
gendiff/formatters/: __init__.py  format_json.py  format_plain.py  format_stylish.py  json.py  plain.py  stylish.py
gendiff/scripts/: file_parser.py  gendiff.py  generate_diff.py  main.py  parser.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
test/: test_calculate_diff.py  test_file_formatter.py  test_file_parser.py  test_flatten.py  test_gendiff.py  test_generate_diff.py  test_yaml.py  utils.py
test/fixtures/: expected_diff.txt  expected_json.txt  expected_stylish.txt  expected_yaml.txt  file1.yaml  file2.yaml  nested_file_1.json  nested_file_2.json  plain_diff_json.txt  plain_diff_nested_json.txt  plain_diff_yaml.txt
tests/: __init__.py  correct_result.txt  correct_result_tree.txt  correct_result_tree_json.txt  correct_result_tree_plain.txt  file1_tree.json  file1_tree.yaml  file2_tree.json  file2_tree.yaml  test_diff.py  test_gendiff.py  test_generate_diff.py  test_readers.py  utility.py  utils.py
tests/expected/: file3.txt  json1.txt
tests/fixtures/: correct_result_tree.txt  file1.yml  file1_tree.json  file2.yml  file2_tree.json  result_json.txt
tests/test_data/: gendiff_result.txt  invalid.json  invalid.yaml  result_json.txt  tests.txt
