[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "asciinema>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"